# rchain

./: .codecov.yml  .drone.yml  .ensime  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .sbtopts  .scalafmt.conf  .travis.yml  Bb.scala  CONTRIBUTING.md  DEVELOPER.md  LICENSE.TXT  Lmdb.scala  LmdbTests.scala  Main.scala  README.md  Storage.scala  StorageTests.scala  balances.js  bonds-hf1.txt  bonds.txt  bors.toml  build-changed.sh  build-each.sh  build.sbt  coding_guidelines.md  keys.js  package-lock.json  package.json  pull_request_template.md  rholangtut-0.2_GR.md  rosette.sh  sbt.sh  scalastyle-config.xml  vdag.dot  wallets.txt  wallets_REV_BLOCK-896988.txt  wallets_REV_BLOCK-908300.txt  (+1 more)
.github/: init-environment  print-integration-test-selection  pull_request_template.md  run-integration-test-selection  run-unit-test-selection  shared.py
.metals/: metals.lock.db
.travis/: id_rsa.enc
casper/: README.md
ci/: build-rhoscala-rbls.sh  build-rosette.sh  build-subprojects.sh  build-ubuntu-rosette.sh  clean-up.sh  header.sh  prep-ubuntu-with-deps.sh  rholang-more-tests-main.sh  rhoscala-additional-tests-main.sh  rhoscala-main.sh  test-rholang-rbls.sh  test-rhoscala-rbls.sh
comm/: .gitignore  .scalafmt.conf  Dockerfile  README.md  build.sbt  build.sh  main.sh  publish-docker-image.sh  test.sh
crypto/: README.md  build.sbt
docker/: Makefile  README.md
docs/: features.md  namespaces-scaling-mercury.md  whiteblock-test-plan.md
integration-testing/: Pipfile  README.md  install_dependencies.sh  mypy.ini  (+5 more)
rosette/: .clang-format  .gitignore  CMakeLists.txt  Copyright.txt  Makefile  README  README.txt  build.sh  clean.sh  cmaketest.sh  default.nix  install.sh  rosette.dox  run.sh  test.sh
rosette/cmake/Modules/: FindGFLAGS.cmake
rosette/defs/: dec.defs  ess_sys.defs  hppa.defs  ncr.defs  sgi.defs  sun3.defs  sun4.defs
rosette/docs/: ref-cover.ps  ref.ps
rosette/h/: Addr.h  BinaryOb.h  Bits.h  BuiltinClass.h  Code.h  CommandLine.h  Compile.h  Cstruct.h  Ctxt.h  Dynload.h  Export.h  Expr.h  ForeignFun.h  GNUmakefile  Heap.h  Import.h  Interrupt.h  Labels.h  Location.h  MI.h  Mbox.h  Meta.h  Method.h  ModuleInit.h  Monitor.h  Number.h  Ob.h  Ob.h~  ObQue.h  ObStk.h  Opcode.h  Operation.h  Parser.h  Pattern.h  Prim.h  Proc.h  PtrCollect.h  PtrQue.h  Queue.h  RBLstream.h  (+18 more)
rosette/h/sys/: bsd.h  dec.h  hppa.h  linux.h  ncr.h  rosette.h  sgi.h  sun-os4.h  sun3.h  sun4.h  sysv4.h
rosette/include/mk/: BIN.mk  COMPONENT.mk  H.mk  RBL.mk  RblModule.mk  SRC.mk  SWITCH.mk  dec-src.defs  default.defs  default.mk  ess.rbl.deps  generic-src.defs  generic.MODULES.mk  hppa-src.defs  ncr-src.defs  rose.rbl.deps  rosh.rbl.deps  sgi-src.defs  sun3-src.defs  sun4-src.defs  supp.ess.rbl.mk  supp.kern.rbl.mk  supp.kern.src.mk  supp.rose.rbl.mk  supp.rosh.rbl.mk  switch.defs
rosette/isode/: Makefile  README
rosette/isode/config/: Makefile  README.ncr  aliases.local  dec-osi.h  dec-osi.make  dec.h  dec.make  entities.local  hppa.h  hppa.make  isode.rc  isotailor  isotailor.osi  isotailor.sed  isotailor.tcp  macros.local  ncr.h  ncr.make  objects.local  quipu.rc  services.local  sgi.h  sgi.make  sun3-osi.h  sun3-osi.make  sun3.h  sun3.make  sun4-osi.h  sun4-osi.make  sun4.h  sun4.make
rosette/isode/rblimisc/: IMISC-01.c  IMISC-02.c  IMISC-03.c  IMISC-04.c  IMISC-05.c  IMISC-06.c  IMISC-07.c  IMISC-08.c  IMISC-09.c  IMISC-10.c  IMISC-11.c  IMISC-12.c  IMISC-13.c  IMISC-asn.py  IMISC-ops.c  IMISC-ops.h  IMISC-stubs.c  IMISC-types.h  IMISC-types.py  IMISC.ph  Makefile  imisc.1c  imisc.c  imisc.ry  imiscd.8c  imiscd.c  ryinitiator.c  ryinitiator.h  ryresponder.c  ryresponder.h
rosette/isode/rbllookup/: LOOKUP-01.c  LOOKUP-02.c  LOOKUP-03.c  LOOKUP-04.c  LOOKUP-05.c  LOOKUP-06.c  LOOKUP-07.c  LOOKUP-08.c  LOOKUP-09.c  Makefile  PasswordLookup-asn.py  PasswordLookup-ops.c  PasswordLookup-ops.h  PasswordLookup-stubs.c  PasswordLookup-types.h  PasswordLookup-types.py  PasswordLookup.ph  lookup.1c  lookup.c  lookup.ry  lookupd.8c  lookupd.c  ryinitiator.c  ryinitiator.h  ryresponder.c  ryresponder.h
rosette/isode/rbltsap/: Makefile  make  tsaplisten.c  tsaprovider.c
rosette/man/man1/: cpmake.1  ess.1  rosette.1  rosh.1
rosette/rbl/: Makefile
rosette/rbl/DOCS/: prim-docs.rbl
rosette/rbl/MODULES/: GNUmakefile  ess.module  iso-agents.module  iso-generic.module  iso-layers.module  isode.module  online.module  tcp.module  usess.module
rosette/rbl/USESS/: imisc.rbl  load-ase-ncd-dcd.rbl  lookup.rbl
rosette/rbl/rosette/: CMakeLists.txt  Makefile  apropos.rbl  async-repl.rbl  boot.rbl  c-structures.rbl  classes-types.rbl  config.rbl  configuration.rbl  consume.rbl  document.rbl  dyn-load.rbl  exceptions.rbl  expander.rbl  foreign-funs.rbl  hello_world.rbl  io-system.rbl  log.rbl  meth-proc-oprns.rbl  multimethod.rbl  namespace-util.rbl  namespace.rbl  primitives.rbl  produce.rbl  que-stk-oprns.rbl  sbo-init.rbl  space-util.rbl  space.rbl  string-oprns.rbl  system.rbl  table-oprns.rbl  time.rbl  timesvc.rbl  trace.rbl  tuple-oprns.rbl  vm-heap.rbl
rosette/rbl/rosette/tests/: README.md  arithmetic_test.rbl  consume-tests.rbl  equiv.ros  fold-tests.rbl  namespace-util-tests.rbl  produce-tests.rbl  reader-iso-8859-1.ros  reader-utf-8.ros  run-tests.ros  runfile.rbl  simple_add.rbl  transition-spec.rbl
rosette/rbl/rosette/tests/segfaults/: regression-ros-304.rbl
rosette/rbl/rosh/: configuration.rbl  errno.rbl  inet-addrs.rbl  module.rbl  netdb.rbl  signals.rbl  unix-files.rbl  unix-ids.rbl  unix-pwd-grp.rbl  unix-resources.rbl  unix-time.rbl
rosette/src/: Actor.cc  BaseSupp.cc  BigBang.cc  BinaryOb.cc  CMakeLists.txt  Code.cc  CommandLine.cc  Compile.cc  Console.cc  Cstruct.cc  Ctxt.cc  Dump-world.cc  Dynl_hpux.c  Dynl_sysv4.c  Dynload.cc  Export.cc  Expr.cc  ForeignFun.cc  Heap.cc  Import.cc  InetSupp.cc  Interrupt.cc  IsodeSupp.cc  Labels.cc  Location.cc  MI.cc  Make.deps  Makefile  Mbox.cc  Meta.cc  Method.cc  ModuleInit.cc  Monitor.cc  MotifSupp.cc  Number.cc  O.GNUmakefile  Ob.cc  ObQue.cc  ObStk.cc  Opcode.cc  (+36 more)
rosette/src/protobuf/: Ob.proto
rosette/tests/: equiv.ros
(+3867 files in other folders)
